--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</div>
 			<div class="col two">
     <body>
-      <h1>Xenox Web Terminal</h1>
+	<h1>Xen6ox Web Terminal</h1>
+	<h3>Welcome to our home</h3>
     <body>
   </head>
