Changed Up Branding For Website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 		</div>
 			<div class="col two">
     <body>
-	<h1>Xen6ox Web Terminal</h1>
-	<h3>Welcome to our home</h3>
+	<h1>Tilde Network</h1>
+	<h3>Welcome to The Tilde Network</h3>
+	<h3>i pride myself in video creation, but more recently me and my friends started a new joint channel called forgotten eyes, check it out</h3>
+	    <h1>check out our channels</h1>
+	    <p>Xenox Gamming <a href="https://www.youtube.com/@TheRealScottMusic"></a>.</p>
+	    <p>VYCRPT <a href="https://www.youtube.com/@VYCRPT"></a>.</p>
+	    <p>Forgotten Eyes <a href="https://www.youtube.com/@Officalsubway"></a>.</p>
     <body>
   </head>
