--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<h3>Welcome to The Tilde Network</h3>
 	<h3>i pride myself in video creation, but more recently me and my friends started a new joint channel called forgotten eyes, check it out</h3>
 	    <h1>check out our channels</h1>
-	    <p>Xenox Gamming <a href="https://www.youtube.com/@TheRealScottMusic"></a>.</p>
-	    <p>VYCRPT <a href="https://www.youtube.com/@VYCRPT"></a>.</p>
-	    <p>Forgotten Eyes <a href="https://www.youtube.com/@Officalsubway"></a>.</p>
+	    <p>Xenox Gamming <a href="https://www.youtube.com/@TheRealScottMusic">Click Here</a></p>
+	    <p>VYCRPT <a href="https://www.youtube.com/@VYCRPT">Click Here</a></p>
+	    <p>Forgotten Eyes <a href="https://www.youtube.com/@Officalsubway">Click Here</a></p>
     <body>
   </head>
