changed website title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>XenoxYTHomepage</title>
+<title>Tilde Network</title>
   <head>
   	<div class="overlay"></div>
 	<div class="scanline"></div>
