--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<h3>Welcome to The Tilde Network</h3>
 	<h3>i pride myself in video creation, but more recently me and my friends started a new joint channel called forgotten eyes, check it out</h3>
 	    <h1>check out our channels</h1>
-	    <p><a href="https://www.youtube.com/@TheRealScottMusic" target="_blank" rel="noopener noreferrer">Xenox Gaming</a>.</p>
-	    <p><a href="https://www.youtube.com/@VYCRPT" target="_blank" rel="noopener noreferrer">VYCRPT</a>.</p>
-	    <p><a href="https://www.youtube.com/@Officalsubway" target="_blank" rel="noopener noreferrer">Forgotten Eyes</a>.</p>
+	    <p><a href="https://www.youtube.com/@TheRealScottMusic" target="_blank" rel="noopener noreferrer">Xenox Gaming</a></p>
+	    <p><a href="https://www.youtube.com/@VYCRPT" target="_blank" rel="noopener noreferrer">VYCRPT</a></p>
+	    <p><a href="https://www.youtube.com/@Officalsubway" target="_blank" rel="noopener noreferrer">Forgotten Eyes</a></p>
     <body>
   </head>
