--- a/Games/GameList.html
+++ b/Games/GameList.html
@@ -1,2 +1,16 @@
+<title>Tilde Network Games</title>
+<head>
+    <div class="overlay"></div>
+  <div class="scanline"></div>
+<div class="wrapper">	
+<div class="content clearfix">
+  <link rel="stylesheet" href="style.css">
+      
+      <header class="site clearfix">
+      <div class="col one">
+          
+      </div>
+          <div class="col two">
+  <body>
 <h1><a href="https://polysheepcodes.github.io/XenoxYTWebpage/"></a>Homepage</h1>
 <h3>here at the tilde network we also make games</h3>
