fixed size, i hope

--- a/Games/GameList.html
+++ b/Games/GameList.html
@@ -12,5 +12,5 @@
       </div>
           <div class="col two">
   <body>
-<p style="font-size:18px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/"></a>Homepage</p>
+<p style="font-size:40px;">Homepage<a href="https://polysheepcodes.github.io/XenoxYTWebpage/"></a></p>
 <h3>here at the tilde network we also make games</h3>
