added and edited a few things

--- a/pageindex.html
+++ b/pageindex.html
@@ -1,4 +1,4 @@
-<title>Tilde Network Games</title>
+<title>Page Browser</title>
 <head>
     <div class="overlay"></div>
   <div class="scanline"></div>
@@ -13,5 +13,4 @@
           <div class="col two">
   <body>
 <p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/">Tilde Network HomePage</a></p>
-<h3>here at the tilde network we also make games</h3>
-<p><a href="https://polysheepcodes.github.io/XenoxYTWebpage/Games/De&De.html">Deeper And Deeper</a></p>
+<p><a href="https://polysheepcodes.github.io/XenoxYTWebpage/Games/GameList.html">Our Game List</a></p>
