p2, added page index link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	    <p><a href="https://www.youtube.com/@TheRealScottMusic" target="_blank" rel="noopener noreferrer">Xenox Gaming</a></p>
 	    <p><a href="https://www.youtube.com/@VYCRPT" target="_blank" rel="noopener noreferrer">VYCRPT</a></p>
 	    <p><a href="https://www.youtube.com/@Officalsubway" target="_blank" rel="noopener noreferrer">Forgotten Eyes</a></p>
-		https://polysheepcodes.github.io/XenoxYTWebpage/
+		<h1>also check out or other pages on our website</h1>
+		<p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/pageindex.html">Page Index</a></p>
     <body>
   </head>
