--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
 <title>Tilde Network</title>
-  <head>
-  	<div class="overlay"></div>
-	<div class="scanline"></div>
-<div class="wrapper">	
-<div class="content clearfix">
-	<link rel="stylesheet" href="style.css">
-		
-		<header class="site clearfix">
-		<div class="col one">
-			
-		</div>
-			<div class="col two">
-    <body>
 	<h1>Tilde Network</h1>
 	<h3>Welcome to The Tilde Network</h3>
 	<h3>i pride myself in video creation, but more recently me and my friends started a new joint channel called forgotten eyes, check it out</h3>
@@ -21,5 +8,4 @@
 	    <p><a href="https://www.youtube.com/@Officalsubway" target="_blank" rel="noopener noreferrer">Forgotten Eyes</a></p>
 		<h1>also check out or other pages on our website</h1>
 		<p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/pageindex.html">Page Index</a></p>
-    <body>
-  </head>
+	<h3>Please Note Site Theme is currently being reworked due to some bugs causing it to have completely broken</h3>
