--- a/pageindex.html
+++ b/pageindex.html
@@ -1,16 +1,5 @@
 <title>Page Browser</title>
-<head>
-    <div class="overlay"></div>
-  <div class="scanline"></div>
-<div class="wrapper">	
-<div class="content clearfix">
-  <link rel="stylesheet" href="style.css">
-      
-      <header class="site clearfix">
-      <div class="col one">
-          
-      </div>
-          <div class="col two">
-  <body>
+<body>
 <p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/">Tilde Network HomePage</a></p>
 <p><a href="https://polysheepcodes.github.io/XenoxYTWebpage/Games/GameList.html">Our Game List</a></p>
+</body>
