remove broken theme p3

--- a/Games/De&De.html
+++ b/Games/De&De.html
@@ -1,19 +1,8 @@
 <title>Deeper and deeper</title>
-<head>
-    <div class="overlay"></div>
-  <div class="scanline"></div>
-<div class="wrapper">	
-<div class="content clearfix">
-  <link rel="stylesheet" href="style.css">
-      
-      <header class="site clearfix">
-      <div class="col one">
-          
-      </div>
-          <div class="col two">
   <body>
     <p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/">Tilde Network HomePage</a></p>
     <h1>Deeper And Deeper</h1>
 <h2>Status: Storyboarding</h2>
 <h3>Deeper and deeper is a game all about exploring a cave full of mysteries and puzzles, but maybe even more, make it to the and find out</h3>
 <h1>Tilde Games 2023</h1>
+  </body>
