--- a/Games/GameList.html
+++ b/Games/GameList.html
@@ -1,17 +1,6 @@
 <title>Tilde Network Games</title>
-<head>
-    <div class="overlay"></div>
-  <div class="scanline"></div>
-<div class="wrapper">	
-<div class="content clearfix">
-  <link rel="stylesheet" href="style.css">
-      
-      <header class="site clearfix">
-      <div class="col one">
-          
-      </div>
-          <div class="col two">
   <body>
 <p style="font-size:60px;"><a href="https://polysheepcodes.github.io/XenoxYTWebpage/">Tilde Network HomePage</a></p>
 <h3>here at the tilde network we also make games</h3>
 <p><a href="https://polysheepcodes.github.io/XenoxYTWebpage/Games/De&De.html">Deeper And Deeper</a></p>
+  </body>
